--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nexus</title>
-    
+    <link rel="shortcut icon" href="./images/icones/logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="./style/main.css">
+    <link rel="stylesheet" href="./style/index.css">
 </head>
 
 <body>
@@ -24,9 +25,21 @@
         </nav>  
     </header>    
     <main>
-
+        <section id="bemVindo">
+            <div> 
+                <h2>Bem-vindo a N<span>exus!</span></h2>
+                <div class="lineBottom"></div>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                </p>
+                <a href="#" class="button">Primeiro Botão</a>
+            </div>
+            <picture>
+                <source media="(min-width: 1000px )" srcset="images/logonexus.png">
+                <img src="" alt="">
+            </picture>
+        </section>
     </main>
-
     <footer>
         <div id="container_footer">
         <section class="social">
