--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </nav>  
     </header>    
     <main>
-        <section id="bemVindo">
+        <section id="bemVindo" class="container">
             <div> 
                 <h2>Bem-vindo a N<span>exus!</span></h2>
                 <div class="lineBottom"></div>
@@ -39,6 +39,62 @@
                 <img src="" alt="">
             </picture>
         </section>
+        <section id="quemSomos" class="container">
+            <picture>
+                <source media="(min-width: 1000px )" srcset="images/imagensSobrepostas.png">
+                <img src="" alt="">
+            </picture>
+            <div> 
+                <h2>Quem <span>somos?</span></h2>
+                <div class="lineBottom"></div>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                </p>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                </p>
+                <a href="#" class="button">Primeiro Botão</a>
+            </div>
+        </section>
+
+        <div id="cadsCursos" class="">
+            <section>
+                <div class="imagem curso1"></div>
+                <p>INICIANTE</p>
+                <h3>Lógica de Programação</h3>
+                <div class="perfilProf">
+                    <img src="" alt="">
+                    <div>
+                        <p class="name">Nome Sobrenome</p>
+                        <p class="atuacao">Área de atuação</p>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <div class="imagem curso2"></div>
+                <p>INICIANTE</p>
+                <h3>JavaScript</h3>
+                <div class="perfilProf">
+                    <img src="" alt="">
+                    <div>
+                        <p class="name">Nome Sobrenome</p>
+                        <p class="atuacao">Área de atuação</p>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <div class="imagem curso3"></div>
+                <p>AVANÇADO <img src="images/icones/Frame (1).svg" alt="icone de coroa dourada"> </p>
+                <h3>Devops</h3>
+                <div class="perfilProf">
+                    <img src="" alt="">
+                    <div>
+                        <p class="name">Nome Sobrenome</p>
+                        <p class="atuacao">Área de atuação</p>
+                    </div>
+                </div>
+            </section>
+        </div>
     </main>
     <footer>
         <div id="container_footer">
