--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <h2>Bem-vindo a N<span>exus!</span></h2>
                 <div class="lineBottom"></div>
                 <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    Bem-vindo ao Nexus! Estamos empolgados em ter você aqui. No Nexus, oferecemos aulas de alta qualidade para desenvolvedores de software, ajudando você a aprimorar suas habilidades e alcançar seus objetivos na área de tecnologia. Explore nossos cursos e descubra como podemos apoiar sua jornada no desenvolvimento de software!
                 </p>
                 <a href="#" class="button">Primeiro Botão</a>
             </div>
@@ -48,10 +48,10 @@
                 <h2>Quem <span>somos?</span></h2>
                 <div class="lineBottom"></div>
                 <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    A Nexus é uma empresa especializada em capacitação para desenvolvedores de software, dedicada a promover o crescimento profissional através de educação de ponta. Oferecemos uma variedade de cursos e treinamentos projetados para atender às necessidades de desenvolvedores em todos os níveis, desde iniciantes até especialistas.
                 </p>
                 <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    Nosso compromisso é com a excelência na formação técnica e no desenvolvimento contínuo, utilizando recursos atualizados e abordagens práticas para garantir que nossos alunos estejam sempre à frente no setor. Na Nexus, acreditamos que investir no aprendizado é essencial para enfrentar os desafios do mercado tecnológico e alcançar o sucesso na carreira de desenvolvimento de software.
                 </p>
                 <a href="#" class="button">Primeiro Botão</a>
             </div>
