--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nexus</title> 
+    <title>Nexus</title>
     <link rel="shortcut icon" href="./images/icones/logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="./style/main.css">
     <link rel="stylesheet" href="./style/index.css">
+
 </head>
 
 <body>
@@ -22,15 +23,18 @@
                 <li><a href="login.html" class="icone"><img src="images/icones/info.svg" alt="icone de informação"></a>
                 </li>
             </ul>
-        </nav>  
-    </header>    
+        </nav>
+    </header>
     <main>
         <section id="bemVindo" class="container">
-            <div> 
+            <div>
                 <h2>Bem-vindo a N<span>exus!</span></h2>
                 <div class="lineBottom"></div>
                 <p>
-                    Bem-vindo ao Nexus! Estamos empolgados em ter você aqui. No Nexus, oferecemos aulas de alta qualidade para desenvolvedores de software, ajudando você a aprimorar suas habilidades e alcançar seus objetivos na área de tecnologia. Explore nossos cursos e descubra como podemos apoiar sua jornada no desenvolvimento de software!
+                    Bem-vindo ao Nexus! Estamos empolgados em ter você aqui. No Nexus, oferecemos aulas de alta
+                    qualidade para desenvolvedores de software, ajudando você a aprimorar suas habilidades e alcançar
+                    seus objetivos na área de tecnologia. Explore nossos cursos e descubra como podemos apoiar sua
+                    jornada no desenvolvimento de software!
                 </p>
                 <a href="#" class="button">Primeiro Botão</a>
             </div>
@@ -44,21 +48,26 @@
                 <source media="(min-width: 1000px )" srcset="images/imagensSobrepostas.png">
                 <img src="" alt="">
             </picture>
-            <div> 
+            <div>
                 <h2>Quem <span>somos?</span></h2>
                 <div class="lineBottom"></div>
                 <p>
-                    A Nexus é uma empresa especializada em capacitação para desenvolvedores de software, dedicada a promover o crescimento profissional através de educação de ponta. Oferecemos uma variedade de cursos e treinamentos projetados para atender às necessidades de desenvolvedores em todos os níveis, desde iniciantes até especialistas.
+                    A Nexus é uma empresa especializada em capacitação para desenvolvedores de software, dedicada a
+                    promover o crescimento profissional através de educação de ponta. Oferecemos uma variedade de cursos
+                    e treinamentos projetados para atender às necessidades de desenvolvedores em todos os níveis, desde
+                    iniciantes até especialistas.
                 </p>
                 <p>
-                    Nosso compromisso é com a excelência na formação técnica e no desenvolvimento contínuo, utilizando recursos atualizados e abordagens práticas para garantir que nossos alunos estejam sempre à frente no setor. Na Nexus, acreditamos que investir no aprendizado é essencial para enfrentar os desafios do mercado tecnológico e alcançar o sucesso na carreira de desenvolvimento de software.
+                    Nosso compromisso é com a excelência na formação técnica e no desenvolvimento contínuo, utilizando
+                    recursos atualizados e abordagens práticas para garantir que nossos alunos estejam sempre à frente
+                    no setor. Na Nexus, acreditamos que investir no aprendizado é essencial para enfrentar os desafios
+                    do mercado tecnológico e alcançar o sucesso na carreira de desenvolvimento de software.
                 </p>
                 <a href="#" class="button">Primeiro Botão</a>
             </div>
         </section>
-
-        <div id="cadsCursos" class="">
-            <section>
+        <div id="cardsCursos" class="container">
+            <section class="card card1">
                 <div class="imagem curso1"></div>
                 <p>INICIANTE</p>
                 <h3>Lógica de Programação</h3>
@@ -70,7 +79,7 @@
                     </div>
                 </div>
             </section>
-            <section>
+            <section class="card card2">
                 <div class="imagem curso2"></div>
                 <p>INICIANTE</p>
                 <h3>JavaScript</h3>
@@ -82,7 +91,7 @@
                     </div>
                 </div>
             </section>
-            <section>
+            <section class="card card3">
                 <div class="imagem curso3"></div>
                 <p>AVANÇADO <img src="images/icones/Frame (1).svg" alt="icone de coroa dourada"> </p>
                 <h3>Devops</h3>
@@ -94,58 +103,135 @@
                     </div>
                 </div>
             </section>
+            <section class="card card4">
+                <div class="imagem curso4"></div>
+                <p>INTERMEDIÁRIO</p>
+                <h3>Nodejs</h3>
+                <div class="perfilProf">
+                    <img src="" alt="">
+                    <div>
+                        <p class="name">Nome Sobrenome</p>
+                        <p class="atuacao">Área de atuação</p>
+                    </div>
+                </div>
+            </section>
+            <section class="card card5">
+                <div class="imagem curso5"></div>
+                <p>AVANÇADO <img src="images/icones/Frame (1).svg" alt="icone de coroa dourada"> </p>
+                <h3>React.js</h3>
+                <div class="perfilProf">
+                    <img src="" alt="">
+                    <div>
+                        <p class="name">Nome Sobrenome</p>
+                        <p class="atuacao">Área de atuação</p>
+                    </div>
+                </div>
+            </section>
+            <section class="card card6">
+                <div class="imagem curso6"></div>
+                <p>INICIANTE</p>
+                <h3>HTML5 + CSS3</h3>
+                <div class="perfilProf">
+                    <img src="" alt="">
+                    <div>
+                        <p class="name">Nome Sobrenome</p>
+                        <p class="atuacao">Área de atuação</p>
+                    </div>
+                </div>
+            </section>
         </div>
+        <section class="parceiros">
+            <div class="logotipos">
+
+            </div>
+        </section>
+        <section class=" container linguagens">
+            <p>Linguagens usadas</p>
+            <h2>Aqui você aprende bem mais</h2>
+            <section class="linguagem">
+                <img src="images/icones/java.svg" alt="Logo da linguagem de programação java na cor branca">
+                <div>
+                    <h3>Java</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
+                        dummy text of the printing.</p>
+                </div>
+            </section>
+            <section class="linguagem">
+                <img src="images/icones/reactjs.svg" alt="Logo do framework react.js na cor branca">
+                <div>
+                    <h3>React.js</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
+                        dummy text of the printing.</p>
+                </div>
+            </section>
+            <section class="linguagem">
+                <img src="images/icones/front.svg" alt="Logo HTML5 na cor branca">
+                <div>
+                    <h3>HTML + CSS + JS</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
+                        dummy text of the printing.</p>
+                </div>
+            </section>
+            <section class="linguagem">
+                <img src="images/icones/python.svg" alt="Logo da linguagem de programação python na cor branca">
+                <div>
+                    <h3>Python</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
+                        dummy text of the printing.</p>
+                </div>
+            </section>
+        </section>
     </main>
     <footer>
         <div id="container_footer">
-        <section class="social">
-            <h1 class="logo"><a href="">NEXUS</a></h1>
-            <ul>
-                <li>
-                    <a href="#" class="media">
-                        <img src="images/icones/instagram.svg" alt="icone do instagram">
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="media">
-                        <img src="images/icones/facebook.svg" alt="icone do facebook">
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="media">
-                        <img src="images/icones/twitter.svg" alt="icone do twitter">
-                    </a>
-                </li>
+            <section class="social">
+                <h1 class="logo"><a href="">NEXUS</a></h1>
+                <ul>
+                    <li>
+                        <a href="#" class="media">
+                            <img src="images/icones/instagram.svg" alt="icone do instagram">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="media">
+                            <img src="images/icones/facebook.svg" alt="icone do facebook">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="media">
+                            <img src="images/icones/twitter.svg" alt="icone do twitter">
+                        </a>
+                    </li>
 
-            </ul>
-        </section>
-        <section>
-            <h4>Links úteis</h4>
-            <ul>
-               <li><a href="index.html">Home</a></li>
-               <li><a href="cursos.html">Cursos</a></li>
-               <li><a href="professores.html">Professores</a></li>
-               <li><a href="contato.html">Contato</a></li> 
-            </ul>
-        </section>
-        <section>
-            <h4>Outros links</h4>
-            <ul>
-               <li><a href="#">Política de Privacidade</a></li>
-               <li><a href="#">Termos de Serviço</a></li>
-               <li><a href="#">Suporte</a></li>
-            </ul>
-        </section>
-        <section>
-            <h4>Desenvolvedores</h4>
-            <ul>
-               <li><a href="https://www.linkedin.com/in/mariolz/" target="_blank">Mario Luiz Silva Guimarães</a></li>
-               <li><a href="#" target="_blank">Asaph Arruda</a></li>
-            </ul>
-            <p>© 2024 Nexus • Todos os direitos reservados</p>
-        </section>
-    </div>
+                </ul>
+            </section>
+            <section>
+                <h4>Links úteis</h4>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="cursos.html">Cursos</a></li>
+                    <li><a href="professores.html">Professores</a></li>
+                    <li><a href="contato.html">Contato</a></li>
+                </ul>
+            </section>
+            <section>
+                <h4>Outros links</h4>
+                <ul>
+                    <li><a href="#">Política de Privacidade</a></li>
+                    <li><a href="#">Termos de Serviço</a></li>
+                    <li><a href="#">Suporte</a></li>
+                </ul>
+            </section>
+            <section>
+                <h4>Desenvolvedores</h4>
+                <ul>
+                    <li><a href="https://www.linkedin.com/in/mariolz/" target="_blank">Mario Luiz Silva Guimarães</a>
+                    </li>
+                    <li><a href="#" target="_blank">Asaph Arruda</a></li>
+                </ul>
+                <p>© 2024 Nexus • Todos os direitos reservados</p>
+            </section>
+        </div>
     </footer>
-</body>
 
 </html>
