--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 </div>
             </section>
             <section class="linguagem">
-                <img src="images/icones/front.svg" alt="Logo HTML5 na cor branca">
+                <img src="images/icones/front.svg" alt="Logo da linguagem de programação JavaScript na cor branca">
                 <div>
                     <h3>HTML + CSS + JS</h3>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
