--- a/cadastro.html
+++ b/cadastro.html
@@ -105,7 +105,7 @@
                         </div>
                     </div>
                 </div>
-                <input type="submit" value="Cadastra-se">
+                <input type="submit" value="Cadastrar">
                 
             </form>
         </section>
