--- a/cadastro.html
+++ b/cadastro.html
@@ -27,7 +27,7 @@
         <section class="login" >
             <img src="images/icones/logo.svg" alt="logo da nexus">
             <p>Faça seu cadastro e comece a usar!</p>
-            <form action="index.html">
+            <form action="login.html">
                
                 <label for="nome">Nome completo</label>
                 <div class="inputs">
