--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
         <section class="login" >
             <img src="images/icones/logo.svg" alt="logo da nexus">
             <p>Faça seu login e comece a usar!</p>
-            <form action="index.html">
+            <form action="cursos.html">
                 <label for="e-mail">Endereço de E-mail</label>
                 <div class="inputs">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
