--- a/contato.html
+++ b/contato.html
@@ -17,63 +17,69 @@
                 <li><a href="cursos.html">Cursos</a></li>
                 <li><a href="professores.html">Professores</a></li>
                 <li><a href="contato.html">Contato</a></li>
-                <li><a href="login.html" class="icone"><img src="images/icones/info.svg" alt="icone de informação"></a>
+                <li><a href="login.html" class="icone loginIn"><span>Entrar</span><svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M15 3.5H19C19.5304 3.5 20.0391 3.71071 20.4142 4.08579C20.7893 4.46086 21 4.96957 21 5.5V19.5C21 20.0304 20.7893 20.5391 20.4142 20.9142C20.0391 21.2893 19.5304 21.5 19 21.5H15" stroke="#18181B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M10 17.5L15 12.5L10 7.5" stroke="#18181B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M15 12.5H3" stroke="#18181B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                    </a>
                 </li>
             </ul>
-        </nav>  
-    </header>    
+        </nav>
+    </header>
     <main>
         
     </main>
     <footer>
         <div id="container_footer">
-        <section class="social">
-            <h1 class="logo"><a href="">NEXUS</a></h1>
-            <ul>
-                <li>
-                    <a href="#" class="media">
-                        <img src="images/icones/instagram.svg" alt="icone do instagram">
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="media">
-                        <img src="images/icones/facebook.svg" alt="icone do facebook">
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="media">
-                        <img src="images/icones/twitter.svg" alt="icone do twitter">
-                    </a>
-                </li>
+            <section class="social">
+                <h1 class="logo"><a href="">NEXUS</a></h1>
+                <ul>
+                    <li>
+                        <a href="#" class="media">
+                            <img src="images/icones/footer/instagram.svg" alt="icone do instagram">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="media">
+                            <img src="images/icones/footer/facebook.svg" alt="icone do facebook">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="media">
+                            <img src="images/icones/footer/twitter.svg" alt="icone do twitter">
+                        </a>
+                    </li>
 
-            </ul>
-        </section>
-        <section>
-            <h4>Links úteis</h4>
-            <ul>
-               <li><a href="index.html">Home</a></li>
-               <li><a href="cursos.html">Cursos</a></li>
-               <li><a href="professores.html">Professores</a></li>
-               <li><a href="contato.html">Contato</a></li> 
-            </ul>
-        </section>
-        <section>
-            <h4>Outros links</h4>
-            <ul>
-               <li><a href="#">Política de Privacidade</a></li>
-               <li><a href="#">Termos de Serviço</a></li>
-               <li><a href="#">Suporte</a></li>
-            </ul>
-        </section>
-        <section>
-            <h4>Desenvolvedores</h4>
-            <ul>
-               <li><a href="https://www.linkedin.com/in/mariolz/" target="_blank">Mario Luiz Silva Guimarães</a></li>
-               <li><a href="#" target="_blank">Asaph Arruda</a></li>
-            </ul>
-            <p>© 2024 Nexus • Todos os direitos reservados</p>
-        </section>
-    </div>
+                </ul>
+            </section>
+            <section>
+                <h4>Links úteis</h4>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="cursos.html">Cursos</a></li>
+                    <li><a href="professores.html">Professores</a></li>
+                    <li><a href="contato.html">Contato</a></li>
+                </ul>
+            </section>
+            <section>
+                <h4>Outros links</h4>
+                <ul>
+                    <li><a href="#">Política de Privacidade</a></li>
+                    <li><a href="#">Termos de Serviço</a></li>
+                    <li><a href="#">Suporte</a></li>
+                </ul>
+            </section>
+            <section>
+                <h4>Desenvolvedores</h4>
+                <ul>
+                    <li><a href="https://www.linkedin.com/in/mariolz/" target="_blank">Mario Luiz Silva Guimarães</a>
+                    </li>
+                    <li><a href="#" target="_blank">Asaph Arruda</a></li>
+                </ul>
+                <p>© 2024 Nexus • Todos os direitos reservados</p>
+            </section>
+        </div>
     </footer>
 </body>
 
