--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="shortcut icon" href="./images/icones/logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="./style/main.css">
     <link rel="stylesheet" href="./style/index.css">
-
 </head>
 
 <body>
@@ -20,7 +19,12 @@
                 <li><a href="cursos.html">Cursos</a></li>
                 <li><a href="professores.html">Professores</a></li>
                 <li><a href="contato.html">Contato</a></li>
-                <li><a href="login.html" class="icone"><img src="images/icones/info.svg" alt="icone de informação"></a>
+                <li><a href="login.html" class="icone loginIn"><span>Entrar</span><svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M15 3.5H19C19.5304 3.5 20.0391 3.71071 20.4142 4.08579C20.7893 4.46086 21 4.96957 21 5.5V19.5C21 20.0304 20.7893 20.5391 20.4142 20.9142C20.0391 21.2893 19.5304 21.5 19 21.5H15" stroke="#18181B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M10 17.5L15 12.5L10 7.5" stroke="#18181B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M15 12.5H3" stroke="#18181B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                    </a>
                 </li>
             </ul>
         </nav>
@@ -40,13 +44,13 @@
             </div>
             <picture>
                 <source media="(min-width: 1000px )" srcset="images/logonexus.png">
-                <img src="" alt="">
+                <img src="images/logonexus.png" alt="logo da nexux">
             </picture>
         </section>
         <section id="quemSomos" class="container">
             <picture>
                 <source media="(min-width: 1000px )" srcset="images/imagensSobrepostas.png">
-                <img src="" alt="">
+                <img src="images/imagensSobrepostas.png" alt="">
             </picture>
             <div>
                 <h2>Quem <span>somos?</span></h2>
@@ -93,7 +97,7 @@
             </section>
             <section class="card card3">
                 <div class="imagem curso3"></div>
-                <p>AVANÇADO <img src="images/icones/Frame (1).svg" alt="icone de coroa dourada"> </p>
+                <p>AVANÇADO <img src="images/icones/index/icone_coroa.svg" alt="icone de coroa dourada"></p>
                 <h3>Devops</h3>
                 <div class="perfilProf">
                     <img src="" alt="">
@@ -117,7 +121,7 @@
             </section>
             <section class="card card5">
                 <div class="imagem curso5"></div>
-                <p>AVANÇADO <img src="images/icones/Frame (1).svg" alt="icone de coroa dourada"> </p>
+                <p>AVANÇADO <img src="images/icones/index/icone_coroa.svg" alt="icone de coroa dourada"></p>
                 <h3>React.js</h3>
                 <div class="perfilProf">
                     <img src="" alt="">
@@ -149,7 +153,7 @@
             <p>Linguagens usadas</p>
             <h2>Aqui você aprende bem mais</h2>
             <section class="linguagem">
-                <img src="images/icones/java.svg" alt="Logo da linguagem de programação java na cor branca">
+                <img src="images/icones/index/java.svg" alt="Logo da linguagem de programação java na cor branca">
                 <div>
                     <h3>Java</h3>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
@@ -157,7 +161,7 @@
                 </div>
             </section>
             <section class="linguagem">
-                <img src="images/icones/reactjs.svg" alt="Logo do framework react.js na cor branca">
+                <img src="images/icones/index/reactjs.svg" alt="Logo do framework react.js na cor branca">
                 <div>
                     <h3>React.js</h3>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
@@ -165,7 +169,7 @@
                 </div>
             </section>
             <section class="linguagem">
-                <img src="images/icones/front.svg" alt="Logo da linguagem de programação JavaScript na cor branca">
+                <img src="images/icones/index/front.svg" alt="Logo da linguagem de programação JavaScript na cor branca">
                 <div>
                     <h3>HTML + CSS + JS</h3>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
@@ -173,7 +177,7 @@
                 </div>
             </section>
             <section class="linguagem">
-                <img src="images/icones/python.svg" alt="Logo da linguagem de programação python na cor branca">
+                <img src="images/icones/index/python.svg" alt="Logo da linguagem de programação python na cor branca">
                 <div>
                     <h3>Python</h3>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
@@ -189,17 +193,17 @@
                 <ul>
                     <li>
                         <a href="#" class="media">
-                            <img src="images/icones/instagram.svg" alt="icone do instagram">
+                            <img src="images/icones/footer/instagram.svg" alt="icone do instagram">
                         </a>
                     </li>
                     <li>
                         <a href="#" class="media">
-                            <img src="images/icones/facebook.svg" alt="icone do facebook">
+                            <img src="images/icones/footer/facebook.svg" alt="icone do facebook">
                         </a>
                     </li>
                     <li>
                         <a href="#" class="media">
-                            <img src="images/icones/twitter.svg" alt="icone do twitter">
+                            <img src="images/icones/footer/twitter.svg" alt="icone do twitter">
                         </a>
                     </li>
 
